# pydirlist

./: .gitignore  LICENSE  LICENSE.md  README.md  config  config.json  config.json2  install.sh  requirements.txt  run.sh  setup.cfg  thumbnailer.sh  uwsgi-debug.sh  uwsgi.sh
keiDirList/: __init__.py  initialize.py
keiDirList/models/: conversions.py
keiDirList/static/: humans.txt
keiDirList/static/css/: dir.css
keiDirList/templates/: dir.html
keiDirList/views/: __init__.py  dir.py
pydirlist/: __init__.py  initialize.py
pydirlist/models/: conversions.py
pydirlist/static/: humans.txt
pydirlist/static/css/: dir.css  dir_gallery.css  dir_gallery.css~
pydirlist/static/js/: video.js
pydirlist/templates/: dir.html  xml.html
pydirlist/views/: dir.py  xml.py
