[metadata]
name = pydirlist
author = researchdpt
author-email = 78095627+researchdpt@users.noreply.github.com
summary = temporary (self-destructing) image uploader
license = WTFPL
description-file =
  README.md
home-page = https://github.com/researchdpt
requires-python = >=3.4
classifier =
  Development Status :: Rolling Release
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: WTFPL
  Operating System :: OS Independent
  Programming Language :: Python

[files]
packages =
  pydirlist
data_files =
  templates = templates/*
  static = static/*
